# GameBe

./: .env  main.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  test_algorithms.py  test_api.py  test_results_20250501_225015.txt  test_results_20250501_230015.txt  vercal.json  vercel.json
api/: index.py
app/: database.py  main.py
app/ai/: ab_mcts_domain_agent.py  alpha_beta_monte_carlo.py  ataxx_env.py  ataxx_state.py  base_mcts.py  binary_mcts.py  binary_mcts_dk.py  binary_mcts_minimax2.py  board.py  board_layouts.py  board_position.py  bot_trainer.py  constants.py  fractional_mcts.py  fractional_mcts_dk.py  full_game_test.py  game_simulation.py  game_test.py  heuristics.py  initial_maps.py  mcts_agent.py  mcts_domain_agent.py  mcts_factory.py  minimax.py  minimax2.py  minimax_agent.py  minimax_player.py  monte_carlo.py  monte_carlo_base.py  monte_carlo_domain.py  monte_carlo_node.py  policy.py  random.py  results.csv  run_simulation.py  uct.py
app/ai/base/: base_mcts.py
app/ai/map/: position_0  position_01_5_empty_w.txt  position_05_22_empty_w.txt  position_07_19_empty_b.txt  position_08_32_empty_b.txt  position_10_23_empty_w.txt  position_11_8_empty_w.txt  position_12_24_empty_w.txt  position_13_19_empty_b.txt  position_14_13_empty_b.txt  position_15_22_empty_w.txt  position_16_30_empty_w.txt  position_17_39_empty_w.txt  (+10 more)
app/api/: routes.py
app/models/: game.py
app/routes/: game.py
function/get_bot_move/: main.py  requirements.txt
function/save_game/: main.py  requirements.txt
function/train_bot/: requirements.txt
(+16 files in other folders)
