[project]
name = "gamebe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "<3.13,>=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "flask[async]>=3.1.0",
    "numpy>=2.2.4",
    "pymongo>=4.12.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.1",
]